outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm_Pwm.h:5,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\src\egtm_atom_3_phase_inverter_pwm.c:18:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm.h:24:5: error: unknown type name 'IfxApProt_Owner'
   24 |     IfxApProt_Owner protOwner;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm.h:25:5: error: unknown type name 'IfxApProt_State'
   25 |     IfxApProt_State protState;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm_Pwm.h:110:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  110 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:2:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm.h:24:5: error: unknown type name 'IfxApProt_Owner'
   24 |     IfxApProt_Owner protOwner;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm.h:25:5: error: unknown type name 'IfxApProt_State'
   25 |     IfxApProt_State protState;
      |     ^~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:4:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_0vl1ah2b\include/IfxEgtm_Pwm.h:110:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  110 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
